--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,10 +1,15 @@
 # Hugo configuration file
-title: My Site
+title: indiegamedev.org
 
 # import hextra as module
 module:
   imports:
     - path: github.com/imfing/hextra
+
+taxonomies:
+  articles_tag: articles_tags
+  news_tag: news_tags
+  tutorial_tag: tutorial_tags
 
 markup:
   # allow raw html
@@ -18,29 +23,30 @@ markup:
 
 menu:
   main:
-    - name: Docs
-      pageRef: /docs
+    - name: Articles
+      pageRef: /articles
       weight: 1
-    - name: About
-      pageRef: /about
+    - name: News
+      pageRef: /news
       weight: 2
-    - name: Contact ↗
-      url: "https://github.com/imfing"
+    - name: Tutorials
+      pageRef: /tutorials
       weight: 3
-    - name: Search
+    - name: Studios
+      pageRef: /studios
       weight: 4
+    - name: Contact ↗
+      url: "https://github.com/nonameentername"
+      weight: 5
+    - name: Search
+      weight: 6
       params:
         type: search
     - name: GitHub
-      weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      weight: 7
+      url: "https://github.com/indiegamedevs/indiegamedev.org"
       params:
         icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
 
 params:
   navbar:
@@ -53,4 +59,4 @@ params:
 
   editURL:
     enable: true
-    base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+    base: "https://github.com/indiegamedevs/indiegamedev.org/edit/main/content"
